@@ -17,11 +17,9 @@
 
 package org.apache.solr.analysis;
 
-import java.util.Map;
-
 import org.apache.lucene.util.Version;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import java.util.Map;
 
 /**
 *
@@ -29,8 +27,6 @@ import org.slf4j.LoggerFactory;
 *
 */
 public abstract class BaseCharFilterFactory implements CharFilterFactory {
-
-  public static final Logger log = LoggerFactory.getLogger(BaseCharFilterFactory.class);
 
   protected Version luceneMatchVersion;
 
